# funding-rate-arb

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-prod.txt  requirements.txt
config/: base.yaml  development.yaml  production.yaml
docs/: CONFIGURATION_DEPLOYMENT.md  DATA_FLOW_DESIGN.md  EXCHANGE_PLUGIN_ARCHITECTURE.md  MODULE_DESIGN.md  OVERVIEW.md  RISK_ORDER_MANAGEMENT.md  SYSTEM_ARCHITECTURE.md
src/: __init__.py  system_manager.py  types.py
src/infrastructure/cache/: __init__.py  redis_manager.py
src/infrastructure/config/: __init__.py  manager.py
src/infrastructure/logging/: __init__.py  setup.py
src/infrastructure/messaging/: __init__.py  message_queue.py  pubsub.py
tests/unit/: test_config.py  test_infrastructure.py  test_types.py
